from enum import Enum

class CrowdState(Enum):
    NORMAL = 1
    HYPED = 2
    TENSE = 3
    DEFLATED = 4

class GameEvent:
    def __init__(self, event_type: str, impact_value: int):
        self.event_type = event_type  # e.g., 'Touchdown', 'Interception', 'Sack'
        self.impact_value = impact_value  # Positive or negative

class MomentumTracker:
    def __init__(self):
        self.current_momentum = 0

    def update_momentum(self, game_event: GameEvent):
        self.current_momentum += game_event.impact_value

    def get_momentum_state(self) -> CrowdState:
        if self.current_momentum >= 10:
            return CrowdState.HYPED
        elif self.current_momentum <= -10:
            return CrowdState.DEFLATED
        elif self.current_momentum > 0:
            return CrowdState.TENSE
        else:
            return CrowdState.NORMAL

class CrowdAnimator:
    def animate(self, state: CrowdState):
        print(f"Animating crowd for state: {state.name}")

class AudioManager:
    def adjust_audio(self, state: CrowdState):
        print(f"Adjusting audio levels for state: {state.name}")

class UIEffectsManager:
    def trigger_effects(self, state: CrowdState):
        print(f"Triggering UI effects for state: {state.name}")

class CommentaryManager:
    def commentate(self, state: CrowdState):
        print(f"Commentating based on momentum state: {state.name}")

class AccessibilitySettings:
    def __init__(self, visual_effects_enabled=True, audio_effects_enabled=True):
        self.visual_effects_enabled = visual_effects_enabled
        self.audio_effects_enabled = audio_effects_enabled

class CrowdManager:
    def __init__(self, momentum_tracker: MomentumTracker, animator: CrowdAnimator,
                 audio_manager: AudioManager, ui_manager: UIEffectsManager,
                 commentary_manager: CommentaryManager, accessibility: AccessibilitySettings):
        self.momentum_tracker = momentum_tracker
        self.animator = animator
        self.audio_manager = audio_manager
        self.ui_manager = ui_manager
        self.commentary_manager = commentary_manager
        self.accessibility = accessibility

    def process_event(self, game_event: GameEvent):
        self.momentum_tracker.update_momentum(game_event)
        state = self.momentum_tracker.get_momentum_state()
        
        self.animator.animate(state)
        if self.accessibility.audio_effects_enabled:
            self.audio_manager.adjust_audio(state)
        if self.accessibility.visual_effects_enabled:
            self.ui_manager.trigger_effects(state)
        self.commentary_manager.commentate(state)

if __name__ == "__main__":
    momentum = MomentumTracker()
    animator = CrowdAnimator()
    audio = AudioManager()
    ui = UIEffectsManager()
    commentary = CommentaryManager()
    accessibility = AccessibilitySettings()

    crowd_manager = CrowdManager(momentum, animator, audio, ui, commentary, accessibility)

    touchdown_event = GameEvent("Touchdown", 7)
    sack_event = GameEvent("Sack", -3)

    crowd_manager.process_event(touchdown_event)
    crowd_manager.process_event(sack_event)
